# novel-ai-reporter-new

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  main.py
app/api/: __init__.py
app/api/routes/: __init__.py  health.py  orchestration.py  projects.py  settings.py  splitter.py
app/core/: __init__.py  agents.py  preferences.py  projects.py  settings.py
app/core/ai/: __init__.py  chunking.py  config.py  exceptions.py  prompts.py  service.py  types.py
app/core/ai/providers/: __init__.py  base.py  claude.py  gemini.py  openai.py
app/core/splitter/: __init__.py  exceptions.py  service.py  strategies.py  types.py
app/models/: __init__.py  common.py  orchestration.py  project.py  settings.py  splitter.py
app/services/: __init__.py  orchestration.py
backend/: requirements.txt
backend/app/: agents.py  main.py
backend/app/adapters/: __init__.py  client.py  providers.py  system_prompt.py
backend/app/routers/: __init__.py  projects.py
backend/app/services/: __init__.py  pipeline.py  splitting.py
backend/tests/: conftest.py  test_agents.py  test_ai_adapters.py  test_projects.py
config/: default.json
scripts/: dev-up.sh  prepare-volumes.sh  run_backend.sh
tests/: conftest.py  test_ai_service.py  test_orchestration_api.py  test_orchestration_service.py  test_projects_api.py  test_settings_api.py  test_splitter_api.py
