[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cto-agents-backend"
version = "0.1.0"
description = "FastAPI backend foundation for agents management"
authors = [{ name = "cto.new" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.23",
    "pydantic>=2.0",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",
]

[tool.uvicorn]
factory = true
app = "app.main:create_application"
